--- a/app/templates/order-form.html
+++ b/app/templates/order-form.html
@@ -36,7 +36,7 @@
             <button
                     [ngClass]="{ 'btn': true, 'btn-success': orderForm.valid, 'btn-danger': !orderForm.valid }"
                     [disabled]="!orderForm.valid">
-                Add
+                Submit order
             </button>
         </div>
     </div>
