--- a/app/templates/order-form.html
+++ b/app/templates/order-form.html
@@ -1,3 +1,4 @@
+<cart></cart>
 <form class="form-horizontal" [ngFormModel]="orderForm" (submit)="submit($event)">
     <div class="panel panel-default">
         <div class="panel-body">
