--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -13,3 +13,11 @@ body {
 .router-link-active:active {
     background-color: #e7e7e7 !important;
 }
+
+.product-promoted {
+    display: inline-block;
+    width: 100%;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+}
