--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -1,13 +1,17 @@
 <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
         <strong>
-            {{ name }}
+            {{ product.name }}
         </strong>
     </div>
-    <div class="col-sm-4">
-        {{ price | currency:'USD':true }}
+    <div class="col-sm-3">
+        {{ product.price | currency:'USD':true }}
     </div>
-    <div *ngIf="promoted" class="col-sm-4 text-right">
-        <div class="label label-success">Promoted</div>
+    <div class="col-sm-3 text-right">
+        <div  *ngIf="promotedVisible" class="label label-success product-promoted">Promoted</div>
+    </div>
+    <div *ngIf="addToCartEnabled || removeFromCartEnabled" class="col-sm-3 text-right">
+        <button *ngIf="addToCartEnabled" class="btn btn-default" (click)="addToCart()">Add to cart</button>
+        <button *ngIf="removeFromCartEnabled" class="btn btn-default" (click)="removeFromCart()">Remove from cart</button>
     </div>
 </div>
